--- a/style.css
+++ b/style.css
@@ -387,7 +387,7 @@ nav .fas {
 /* ----------CSS FOR SMALL SCREEN---------- */
 @media only screen and (max-width: 600px) {
     #header {
-        background-image: url(images/phone-background.png);
+        background-image: url(images/user.png);
     }
 
     .header-text {
