--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 #header {
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-image: url(images/mobile-background.png);
     background-size: cover;
     background-position: center;
